# bz-next

./: .gitignore  .gitmodules  CMakeLists.txt  COPYING  LIBRARYATTRIBUTION  README.md
plugins/: CMakeLists.txt
plugins/bzfscron/: CMakeLists.txt
plugins/plugin_utils/: CMakeLists.txt
plugins/regFlag/: CMakeLists.txt
plugins/serverSidePlayerSample/: CMakeLists.txt
src/: CMakeLists.txt
src/3D/: CMakeLists.txt  MagnumTextureManager.cpp  TextureManager.cxx
src/bzadmin/: CMakeLists.txt
src/bzflag/: CMakeLists.txt
src/bzflag-new/: BZChatConsole.cpp  BZMaterialBrowser.cpp  BZMaterialBrowser.h  BZMaterialViewer.cpp  BZMaterialViewer.h  BZScoreboard.cpp  BZScoreboard.h  BZTextureBrowser.cpp  CMakeLists.txt  Downloads.cxx  Drawables.cpp  Drawables.h  GLInfo.cpp  ImGuiANSITextRenderer.cpp  ImGuiANSITextRenderer.h  LocalPlayer.cxx  Player.cxx  SceneBuilder.cxx  TexturedQuadShader.frag  TexturedQuadShader.h  TexturedQuadShader.vert  World.cxx  World.h  WorldBuilder.cxx  WorldPrimitiveGenerator.cpp  WorldPrimitiveGenerator.h  WorldRenderer.cpp  WorldRenderer.h  WorldSceneBuilder.cpp  WorldSceneBuilder.h  bzflag-new.cpp  playing.cxx  resources.conf
src/bzflag-next/: BZChatConsole.h  BZMaterialBrowser.cpp  BZMaterialViewer.cpp  BZMaterialViewer.h  BZScoreboard.cpp  BZScoreboard.h  BZTextureBrowser.cpp  CMakeLists.txt  Downloads.cxx  Drawables.cpp  Drawables.h  GuidedMissleStrategy.cxx  GuidedMissleStrategy.h  ImGuiANSITextRenderer.cpp  LocalPlayer.cxx  LocalPlayer.h  ObstacleBrowser.cpp  Player.cxx  Player.h  RadarRenderer.cxx  Roaming.cxx  ScoreboardRenderer.cxx  SegmentedShotStrategy.cxx  ShotPath.h  ShotStrategy.h  TargetingUtils.cxx  World.cxx  WorldBuilder.cxx  WorldPrimitiveGenerator.cpp  WorldRenderer.cpp  WorldRenderer.h  WorldSceneBuilder.cpp  bzflag-next.cpp  callbacks.cxx  clientCommands.cxx  motd.cxx  playing.cxx  playing.h
src/bzfs/: CMakeLists.txt  CustomArc.h  CustomCone.cxx  CustomCone.h  CustomGroup.cxx  CustomMaterial.cxx  CustomMaterial.h  CustomMeshFace.h  CustomPyramid.cxx  CustomPyramid.h  CustomTetra.cxx  CustomWaterLevel.cxx  CustomWaterLevel.h  ParseMaterial.cxx  WorldInfo.cxx  bzfsAPI.cxx
src/bzwreader/: BZWReader.cxx  CMakeLists.txt  CustomArc.cxx  CustomBase.cxx  CustomBox.cxx  CustomBox.h  CustomMaterial.cxx  CustomMesh.cxx  CustomMeshFace.cxx  CustomSphere.cxx  CustomWeapon.cxx  WorldInfo.cxx  WorldInfo.h  WorldWeapons.cxx  WorldWeapons.h
src/bzwreader/include/: BZWReader.h  CustomMesh.h  CustomSphere.h  CustomTetra.h  ParseMaterial.h
src/common/: CMakeLists.txt  FileManager.cxx  OSFile.cxx  Team.cxx  TextUtils.cxx  cURLManagerEmscriptenShim.cpp
src/date/: CMakeLists.txt  buildDate.cxx
src/game/: CMakeLists.txt  CacheManager.cxx  CachedResource.cpp  Downloads.cxx  DynamicColor.cxx  MagnumBZMaterial.cpp  MeshTransform.cxx  PhysicsDriver.cxx  TextureMatrix.cxx
src/game/include/: CachedResource.h
src/geometry/: CMakeLists.txt  MeshDrawMgr.cxx  MeshFragSceneNode.cxx  MeshSceneNode.cxx
src/geometry/models/tank/: CMakeLists.txt
src/gfx/: CMakeLists.txt  DrawMode.cpp  DrawModeManager.cpp  DrawableGroupManager.cpp  Drawables.cpp  GLInfo.cpp  IndexedMeshData.cpp  MagnumSceneManager.cpp  MagnumSceneRenderer.cpp  SceneObjectManager.cpp  WorldMeshGenerator.cpp  WorldPrimitiveGenerator.cpp  WorldRenderer.cpp  WorldSceneObjectGenerator.cpp
src/gfx/SceneObjects/: BulletObjectBuilder.cpp  CMakeLists.txt  TankObjectBuilder.cpp  TankSceneObject.cpp
src/gfx/SceneObjects/include/: BulletObjectBuilder.h  BulletSceneObject.h  SceneObjectAnimables.h  TankObjectBuilder.h  TankSceneObject.h
src/gfx/Shaders/: BasicTexturedShader.cpp  CMakeLists.txt  DepthMapShader.cpp  DepthMapVisualizerShader.cpp  DepthReinterpretShader.cpp  EnhancedPhongGL.cpp  RaymarchedCloudsShader.cpp
src/gfx/Shaders/include/: BasicTexturedShader.h  DepthMapShader.h  DepthMapVisualizerShader.h  DepthReinterpretShader.h  EnhancedPhongGL.h  RaymarchedCloudsShader.h
src/gfx/Shaders/resources/: BasicTexturedShader.frag  DepthMapShader.frag  DepthMapShader.vert  DepthMapVisualizerShader.frag  DepthMapVisualizerShader.vert  DepthReinterpretShader.frag  DepthReinterpretShader.vert  EnhancedPhong.frag  EnhancedPhong.vert  EnhancedPhongAttribs.glsl  RaymarchedCloudsShader.frag  RaymarchedCloudsShader.vert  resources.conf
src/gfx/include/: DrawMode.h  DrawModeManager.h  DrawableGroupManager.h  Drawables.h  IndexedMeshData.h  MagnumSceneManager.h  MagnumSceneRenderer.h  SceneObjectManager.h  WorldMeshGenerator.h  WorldRenderer.h  WorldSceneBuilder.h  WorldSceneObjectGenerator.h
src/mapviewer/: AutoPilot.cxx  BZChatConsole.cpp  BZMaterialBrowser.h  BZMaterialViewer.cpp  BZMaterialViewer.h  BZScoreboard.cpp  CMakeLists.txt  Downloads.cxx  Downloads.h  Drawables.h  GLInfo.h  MagnumDefs.h  Player.cxx  Player.h  RemotePlayer.cxx  RobotPlayer.cxx  SegmentedShotStrategy.cxx  ShockWaveStrategy.cxx  World.cxx  WorldPlayer.cxx  WorldPrimitiveGenerator.h  WorldSceneBuilder.cpp  defaultBZDB.cxx  mapviewer.cpp
src/mapviewer/resources/: resources.conf
src/mediafile/: CMakeLists.txt
src/net/: CMakeLists.txt
src/obstacle/: ArcObstacle.cxx  CMakeLists.txt  ConeObstacle.cxx  MeshDrawInfo.cxx  MeshFace.cxx  MeshObstacle.cxx  MeshSceneNodeGenerator.cxx  MeshUtils.h  ObstacleMgr.cxx  ObstacleModifier.cxx  SphereObstacle.cxx  TetraBuilding.cxx
src/ogl/: CMakeLists.txt
src/platform/: CMakeLists.txt  SDL2Window.cxx
src/scene/: CMakeLists.txt
src/widgets/: AboutDialog.cpp  BZMaterialBrowser.cpp  BZMaterialViewer.cpp  BZTextureBrowser.cpp  BZWTextEditor.cpp  CMakeLists.txt  CacheBrowser.cpp  DrawableGroupBrowser.cpp  DynColorBrowser.cpp  MeshTransformBrowser.cpp  ObstacleBrowser.cpp  OnlineMapBrowser.cpp  PhyDrvBrowser.cpp  SceneObjectBrowser.cpp  TexMatBrowser.cpp  TextEditor.cpp
src/widgets/include/: AboutDialog.h  BZMaterialViewer.h  BZTextureBrowser.h  BZWTextEditor.h  CacheBrowser.h  DrawableGroupBrowser.h  DynColorBrowser.h  MeshTransformBrowser.h  ObstacleBrowser.h  OnlineMapBrowser.h  PhyDrvBrowser.h  SceneObjectBrowser.h  TexMatBrowser.h  TextEditor.h  emscripten_browser_file.h
(+39 files in other folders)
