add_executable(bzfs
    AccessControlList.cxx
    AccessControlList.h
    Authentication.cxx
    Authentication.h
    BanCommands.cxx
    base64.cxx
    base64.h
    bzfsAPI.cxx
    bzfs.cxx
    bzfs.h
    bzfsHTTPAPI.cxx
    bzfsPlugins.cxx
    bzfsPlugins.h
    BZWError.cxx
    BZWError.h
    BZWReader.cxx
    BZWReader.h
    CmdLineOptions.cxx
    CmdLineOptions.h
    commands.cxx
    commands.h
    CustomArc.cxx
    CustomArc.h
    CustomBase.cxx
    CustomBase.h
    CustomBox.cxx
    CustomBox.h
    CustomCone.cxx
    CustomCone.h
    CustomDynamicColor.cxx
    CustomDynamicColor.h
    CustomGate.cxx
    CustomGate.h
    CustomGroup.cxx
    CustomGroup.h
    CustomLink.cxx
    CustomLink.h
    CustomMaterial.cxx
    CustomMaterial.h
    CustomMesh.cxx
    CustomMeshFace.cxx
    CustomMeshFace.h
    CustomMesh.h
    CustomMeshTransform.cxx
    CustomMeshTransform.h
    CustomPhysicsDriver.cxx
    CustomPhysicsDriver.h
    CustomPyramid.cxx
    CustomPyramid.h
    CustomSphere.cxx
    CustomSphere.h
    CustomTetra.cxx
    CustomTetra.h
    CustomTextureMatrix.cxx
    CustomTextureMatrix.h
    CustomWaterLevel.cxx
    CustomWaterLevel.h
    CustomWeapon.cxx
    CustomWeapon.h
    CustomWorld.cxx
    CustomWorld.h
    CustomZone.cxx
    CustomZone.h
    DropGeometry.cxx
    DropGeometry.h
    EntryZones.cxx
    EntryZones.h
    Filter.cxx
    Filter.h
    FlagHistory.cxx
    FlagHistory.h
    FlagInfo.cxx
    FlagInfo.h
    GameKeeper.cxx
    GameKeeper.h
    ListServerConnection.cxx
    ListServerConnection.h
    MasterBanList.cxx
    MasterBanList.h
    PackVars.h
    ParseMaterial.cxx
    ParseMaterial.h
    Permissions.cxx
    Permissions.h
    RandomSpawnPolicy.cxx
    RandomSpawnPolicy.h
    RecordReplay.cxx
    RecordReplay.h
    RejoinList.cxx
    RejoinList.h
    Score.cxx
    Score.h
    ServerCommand.cxx
    ServerCommand.h
    ServerSidePlayer.cxx
    ShotManager.cxx
    ShotManager.h
    SpawnPolicy.cxx
    SpawnPolicy.h
    SpawnPosition.cxx
    SpawnPosition.h
    TeamBases.cxx
    TeamBases.h
    VotingArbiter.cxx
    VotingArbiter.h
    WorldEventManager.cxx
    WorldFileLocation.cxx
    WorldFileLocation.h
    WorldFileObject.cxx
    WorldFileObject.h
    WorldFileObstacle.cxx
    WorldFileObstacle.h
    WorldGenerators.cxx
    WorldGenerators.h
    WorldInfo.cxx
    WorldInfo.h
    WorldWeapons.cxx
    WorldWeapons.h
)

set_target_properties(bzfs PROPERTIES ENABLE_EXPORTS on)

target_link_libraries(bzfs
    ${ZLIB_LIBRARIES}
    ${CMAKE_DL_LIBS}
    bzcommon
    bznet
    bzgame
    bzobstacle
    bzdate
    bz3D
    bzgame
)
